added bestchange link to website footer on main page
