# swagger.yaml
@@ -306,7 +306,7 @@ definitions:
 host: localhost:8080
 info:
   contact:
-    email: support@ion.lc
+    email: support@chx.su
     name: Swap Support
     url: http://github.com/d1nch8g/swap
   description: Swap exchange api.
@@ -477,6 +477,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/server.rates'
+      summary: Export to bestchange.
+  /bclink:
+    get:
+      responses:
+        "200":
+          description: OK
       summary: Export to bestchange.
   /confirm-payment:
     post:
